--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -52,10 +52,10 @@ span.btn__icon {
 }
 /* Button: spacing */
 * + .btn-group {
-  @apply mt-6;               /* margin-top: 24px; */
+  @apply mt-8;               /* margin-top: 32px; */
   @media (min-width: theme('screens.lg')) {
     & {
-      @apply mt-10;          /* margin-top: 40px; */
+      @apply mt-12;          /* margin-top: 48px; */
     }
   }
 }
